--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@300&display=swap');
-:root
-{
+:root{
     --main-color:#0aad0a;
     --light-color:#f0f3f2;
     --shadow: rgba(145,158,171,.2) 0px 2px 4px -1px,rgba(145,158,171,.14) 0px 4px 5px 0px,rgba(145,158,171,.12) 0px 1px 10px 0px;
@@ -24,11 +23,18 @@ a , a:hover{
     color: black;
     text-decoration: none;
 }
-.product:hover
-{
+
+.product{
+    border: solid 1px transparent;
+}
+.product:hover {
     box-shadow: var(--shadow);
     border: solid 1px var(--main-color);
+    border-radius: 7px;
 }
+
+
+
 .product .btn 
 {
     transition: transform 1s , opacity 1s;
