display all brand

--- a/src/index.css
+++ b/src/index.css
@@ -27,16 +27,22 @@ a , a:hover{
 .product{
     border: solid 1px transparent;
 }
-.category{
+.category,.brand{
     border: solid 1px gray;
     border-radius: 7px;
 }
-.product:hover ,.category:hover{
+/* .product:hover ,.category:hover,.brand:hover{
     box-shadow: var(--shadow);
     border: solid 1px var(--main-color);
     border-radius: 7px;
+} */
+
+.product:hover, .category:hover, .brand:hover {
+    box-shadow: 0 0 10px rgba(10, 173, 10, 0.5); /* Adjust values as needed */
+    border: solid 1px var(--main-color);
+    border-radius: 7px;
 }
-.category img{
+.category img,.brand img{
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
 }
