--- a/src/Components/Brands/Brands.module.css
+++ b/src/Components/Brands/Brands.module.css
@@ -1,1 +1,53 @@
-.Brands {}
+.above_layer {
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    position: fixed;
+    /* padding-block: 40px; */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.5); 
+  }
+  
+  .inner_layer {
+    margin-top: 20px;
+    border-radius: 10px;
+    padding: 20px 10px;
+    width: 45%;
+    /* height:45%; */
+    background-color: white;
+  }
+  
+  @media screen and (max-width: 1550px) {
+    .inner_layer {
+      width: 45%;
+    }
+  }
+  
+  @media screen and (max-width: 1160px) {
+    .inner_layer {
+      width: 55%;
+    }
+  }
+  
+  @media screen and (max-width: 750px) {
+    .inner_layer {
+      width: 60%;
+    }
+  }
+  
+  @media screen and (max-width: 570px) {
+    .inner_layer {
+      width: 80%;
+    }
+  }
+  
+  @media screen and (max-width: 425px) {
+    .inner_layer {
+      width: 98%;
+    }
+  }
+  
