--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,17 @@ a , a:hover{
     transform: translateY(0%);
 
 }
+.search_input{
+       border: 2px solid black;
+       border-radius: 30px;
+}
+
+
+.search_input:focus,
+.search_input:hover {
+    border-color: var(--main-color) !important; 
+    outline-color: var(--main-color) !important; 
+}
 .font-sm
 {
     font-size: 14px;
